syntax = "proto3";

option java_package = "br.com";
option java_multiple_files = true;

package br.com;

service UserService {
  rpc findUser(UserRequest) returns (UserResponse);
}

message UserRequest {
  string message = 1;
}

message UserResponse {
  string message = 1;
}